add model checkpoint

--- a/debiasing/exp/danube-infonce.yaml
+++ b/debiasing/exp/danube-infonce.yaml
@@ -1,7 +1,9 @@
 program: main_infonce.py
 batch_size: 256
-data_dir: /data
-dataset: biased-mnist_0.999
+data_dir: /home/khaled/workspace/projects/ucl/debiasing/data/camera_ip
+output_dir: ./weights
+save_every: 10
+dataset: danube
 epochs: 80
 epsilon: 0
 lr: 0.001
