--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-gdown==4.4.0
-numpy==1.20.1
-Pillow==9.1.1
-scikit_learn==1.1.1
-torch==1.8.1
-torchvision==0.9.1
+numpy==1.26.4
+Pillow==10.3.0
+scikit_learn==1.3.0
+torch==2.2.2
+torchvision==0.17.2
 wandb==0.12.16
+faiss-gpu==1.8.0
+ultralytics==8.2.2
+matplotlib-base==3.8.4
