--- a/src/configs/inference.yaml
+++ b/src/configs/inference.yaml
@@ -1,6 +1,6 @@
 program: infer.py
 data_dir: data/
 camera_names: all # list of camera names or 'all'
-model: resnet18
-model_weights: weights/checkpoint_100.pth
+backbone: resnet18
+checkpoint: weights/checkpoint_100.pth
 yolo_weights: weights/DavidK0-YOLOv8-small.pt
